--- a/src/app/demo/components/uikit/table/tabledemo.component.html
+++ b/src/app/demo/components/uikit/table/tabledemo.component.html
@@ -4,7 +4,7 @@
             <h5>Filter Menu</h5>
             <p-table
                 [scrollable]="true"
-                scrollHeight="400px"
+                scrollHeight="700px"
                 [value]="customers1"
                 [loading]="loading"
                 [rowHover]="true"
@@ -25,17 +25,69 @@
 				</ng-template> -->
                 <ng-template pTemplate="header">
                     <tr>
-                        <th pFrozenColumn style="min-width: 200px">
+                        <th style="min-width: 200px">
                             <div class="">Name</div>
                         </th>
-                        <th pFrozenColumn style="min-width: 200px">
+                        <th style="min-width: 200px">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
                                 Country
                             </div>
                         </th>
-                        <th pFrozenColumn style="min-width: 200px">
+                        <th style="min-width: 200px">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                                Agent
+                            </div>
+                        </th>
+                        <th style="min-width: 200px">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                                Date
+                            </div>
+                        </th>
+                        <th style="min-width: 200px">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                                Balance
+                            </div>
+                        </th>
+                        <th style="min-width: 200px">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                                Status
+                            </div>
+                        </th>
+                        <th style="min-width: 200px">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                                Activity
+                            </div>
+                        </th>
+                        <th style="min-width: 200px">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                                Verified
+                            </div>
+                        </th>
+                        <th style="min-width: 200px">
+                            <div class="">Name</div>
+                        </th>
+                        <th style="min-width: 200px">
+                            <div
+                                class="flex justify-content-between align-items-center"
+                            >
+                                Country
+                            </div>
+                        </th>
+                        <th style="min-width: 200px">
                             <div
                                 class="flex justify-content-between align-items-center"
                             >
@@ -81,10 +133,10 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-customer>
                     <tr>
-                        <td pFrozenColumn>
+                        <td>
                             {{ customer.name }}
                         </td>
-                        <td pFrozenColumn>
+                        <td>
                             <img
                                 src="assets/demo/images/flag/flag_placeholder.png"
                                 [class]="'flag flag-' + customer.country.code"
@@ -94,7 +146,59 @@
                                 customer.country.name
                             }}</span>
                         </td>
-                        <td pFrozenColumn>
+                        <td>
+                            <img
+                                [alt]="customer.representative.name"
+                                src="assets/demo/images/avatar/{{
+                                    customer.representative.image
+                                }}"
+                                width="32"
+                                style="vertical-align: middle"
+                            />
+                            <span class="image-text ml-2">{{
+                                customer.representative.name
+                            }}</span>
+                        </td>
+                        <td>
+                            {{ customer.date | date : "MM/dd/yyyy" }}
+                        </td>
+                        <td>
+                            {{ customer.balance | currency : "USD" : "symbol" }}
+                        </td>
+                        <td>
+                            <span
+                                [class]="
+                                    'customer-badge status-' + customer.status
+                                "
+                                >{{ customer.status }}</span
+                            >
+                        </td>
+                        <td>098651124212474</td>
+                        <td class="text-center">
+                            <i
+                                class="pi"
+                                [ngClass]="{
+                                    'true-icon pi-check-circle text-green-500':
+                                        customer.verified,
+                                    'false-icon pi-times-circle text-pink-500':
+                                        !customer.verified
+                                }"
+                            ></i>
+                        </td>
+                        <td>
+                            {{ customer.name }}
+                        </td>
+                        <td>
+                            <img
+                                src="assets/demo/images/flag/flag_placeholder.png"
+                                [class]="'flag flag-' + customer.country.code"
+                                width="30"
+                            />
+                            <span class="image-text ml-2">{{
+                                customer.country.name
+                            }}</span>
+                        </td>
+                        <td>
                             <img
                                 [alt]="customer.representative.name"
                                 src="assets/demo/images/avatar/{{
@@ -148,6 +252,90 @@
                     </tr>
                 </ng-template>
             </p-table>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="card text-bg-primary mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Primary card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
+        <div class="card text-bg-secondary mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Secondary card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
+        <div class="card text-bg-success mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Success card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
+        <div class="card text-bg-danger mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Danger card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
+        <div class="card text-bg-warning mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Warning card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
+        <div class="card text-bg-info mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Info card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
+        <div class="card text-bg-light mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Light card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
+        <div class="card text-bg-dark mb-3" style="max-width: 18rem">
+            <div class="card-header">Header</div>
+            <div class="card-body">
+                <h5 class="card-title">Dark card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                </p>
+            </div>
         </div>
     </div>
 </div>
