--- a/src/app/demo/components/uikit/table/tabledemo.component.html
+++ b/src/app/demo/components/uikit/table/tabledemo.component.html
@@ -8,7 +8,7 @@
                 [value]="customers1"
                 [loading]="loading"
                 [rowHover]="true"
-                styleClass="p-datatable-gridlines"
+                styleClass="p-datatable-gridlines p-datatable-center p-datatable-xs"
                 [paginator]="false"
                 responsiveLayout="scroll"
                 [virtualScroll]="true"
