--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,13 @@ $gutter: 1rem; //for primeflex grid system
 @import "assets/demo/styles/flags/flags.css";
 @import "assets/demo/styles/badges.scss";
 @import "assets/demo/styles/code.scss";
-table {
+.p-datatable-table {
     border-collapse: separate !important;
+    color: red;
+}
+.p-datatable.p-datatable-xs .p-datatable-tbody > tr > td {
+    padding: 0.2rem;
+}
+.p-datatable.p-datatable-center .p-datatable-tbody > tr > td {
+    text-align: center;
 }
